# cryptoadapter

./: .gitignore  CMakeLists.txt  README.md
doxygen/: doxygen.conf.in
src/: version.h  version.h.in
src/bitstamp/: adapter_price.cpp  connector_rest_price.cpp  connector_rest_price.h
src/kraken/: adapter_price.h  adapter_trade.cpp  adapter_trade.h  connector_rest_trade.cpp  connector_ws_price.cpp  connector_ws_trade.cpp
src/template/: connector_rest_trade.h  connector_ws_price.h  connector_ws_trade.h
